reprodukcja fix